[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project]
name = "search"
authors = [{name = "Beau Lonnquist", email = "beau.lonnquist@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.7"
dependencies = [
    "pytest",
    "networkx"
]

[project.urls]
Home = "https://github.com/blonn25/HW2-BFS.git"